--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "larvitdb-pg",
-  "version": "0.3.1",
+  "version": "0.4.0",
   "description": "Database wrapper for pg (PostgreSQL)",
   "main": "build/index.js",
   "files": [
     "/build"
   ],
   "scripts": {
-    "build": "tsc",
+    "build": "npm run lint && tsc",
     "lint": "tslint ./src/* ./test/*",
     "test": "npm run lint && ts-node node_modules/.bin/tape test/*.ts"
   },
@@ -32,18 +32,18 @@
   },
   "homepage": "https://github.com/larvit/larvitdb-pg#readme",
   "dependencies": {
-    "larvitutils": "^3.1.1",
-    "pg": "^7.12.1"
+    "larvitutils": "3.2.0",
+    "pg": "7.12.1"
   },
   "devDependencies": {
-    "@types/dotenv": "^6.1.1",
-    "@types/node": "^12.7.1",
-    "@types/pg": "^7.4.14",
-    "@types/tape": "^4.2.33",
-    "dotenv": "^8.0.0",
-    "tape": "^4.11.0",
-    "ts-node": "^8.3.0",
-    "tslint": "^5.18.0",
-    "typescript": "^3.5.3"
+    "@types/dotenv": "6.1.1",
+    "@types/node": "12.7.2",
+    "@types/pg": "7.11.0",
+    "@types/tape": "4.2.33",
+    "dotenv": "8.1.0",
+    "tape": "4.11.0",
+    "ts-node": "8.3.0",
+    "tslint": "5.19.0",
+    "typescript": "3.6.2"
   }
 }
